# lastditch

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  TAGS
.cache/clangd/index/: action.c.3C70BA74C90A0689.idx  action.c.7B849044F2A28AA7.idx  action.c.818A80105E0202CA.idx  action.c.8652DF2C09F0DB82.idx  action.c.C12FA35644E65B4A.idx  action.cpp.049804B16033ABF1.idx  action.cpp.62C805039960272C.idx  action.h.86586EA551765DFE.idx  action.h.880AC3CE6E8A9B37.idx  action.h.AB113541D6A64273.idx  action.h.CD93C9F496BD081F.idx  action.h.E11D2DFB5C16A6BA.idx  action.h.ECC05A693B2ADA24.idx  actor.c.63CA779FFBF921C9.idx  actor.c.B1C3B52067B69F57.idx  actor.c.BAEA4B76704CA4F6.idx  actor.c.BD4722A0B655868C.idx  actor.c.DCA9F0DBF56FA4D1.idx  actor.cpp.246966029788AD28.idx  actor.cpp.393411762545CD35.idx  actor.h.4C4FD5AF171882F3.idx  actor.h.70D49CC2FDA84C63.idx  actor.h.A0C29AE59A0846A1.idx  actor.h.AB54D0513D3C5D74.idx  actor.h.BA1C5D170621DA1E.idx  actor.h.E46D070A601BBD3D.idx  area.c.9A9DFEBC603859F1.idx  area.cpp.28C059023EB501F6.idx  area.cpp.38717895C7713B65.idx  area.h.AB0EC7F13F2956A0.idx  area.h.E4A76949807B9C45.idx  camera.c.70E7F098A895DA78.idx  camera.h.48A343C0EBBE1559.idx  control.h.BC3198E8F6C72F4B.idx  core.c.CF1DEAB0A1DC37FA.idx  core.c.F6370FA4F294307A.idx  core.h.2B6F66BA2CCE0919.idx  core.h.AF1FF5D3308E9B61.idx  core_data.h.FB353801D12A018B.idx  debug.c.2A157CD36F411AD4.idx  (+211 more)
assets/shaders/: sector.frag  sector.vert  test.frag  test.vert
build-xcode/: CMakeCache.txt  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: lastditch
build-xcode/Debug/assets/shaders/: model.vert  text.vert
build-xcode/lastditch.xcodeproj/: project.pbxproj
build-xcode/lastditch.xcodeproj/project.xcworkspace/xcuserdata/ecssiah.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/lastditch.xcodeproj/xcuserdata/ecssiah.xcuserdatad/xcschemes/: xcschememanagement.plist
config/: actor.ini  block.ini  block_types.ini
docs/: design.org  devlog.org  doc.org  last_ditch_documentation.org  ld_development.org  ld_documentation.org  ld_issues.org  overview.org
scripts/: build.sh
src/: action.c  action.h  actor.c  actor.h  camera.c  camera.h  input.c  input.h  lastditch.cc  lastditch.cpp  ld_data.h  main.c  physics.c  physics.h  render.c  render.h  screen.c  screen.h  shell.c  shell.h  sim.c  sim.h  viewpoint.c  viewpoint.h  world.c  world.h
src/app/: Area.cc  Area.h  Debug.cc  Debug.h  World.h  action.cc  action.cpp  action.h  actor.cc  actor.cpp  actor.h  app.cc  app.cpp  app.h  area.cc  area.cpp  area.h  control.cpp  control.h  debug.cc  debug.cpp  debug.h  direction.cc  direction.cpp  direction.h  nation.cc  nation.cpp  nation.h  navigation.cc  navigation.h  physics.cc  physics.cpp  physics.h  pool.h  population.cc  population.cpp  population.h  render.cc  render.cpp  render.h  (+17 more)
src/core/: action.c  action.h  config.cpp  config.h  core.c  core.h  core_data.h  geometry.cc  geometry.cpp  geometry.h  id.h  log.cc  log.cpp  log.h  macros.h  math_ext.c  math_ext.cpp  math_ext.h  random.cpp  random.h  types.h
src/core/math/: math.c  math.h
src/edit/: edit.c
src/edit/shell/: render.c  render.h  screen.c  screen.h  shell.c  shell.h  shell_data.h  viewpoint.c  viewpoint.h
src/edit/sim/: actor.c  actor.h  physics.c  physics.h  sim.c  sim.h  sim_data.h  world.c  world.h
src/game/: game.c  game.cpp  lastditch.cc  lastditch.cpp
src/game/shell/: gl_ext.cpp  gl_ext.h  render.c  render.cc  render.cpp  render.h  screen.c  screen.cpp  screen.h  shell.c  shell.cpp  shell.h  shell_data.h  viewpoint.c  viewpoint.cpp  viewpoint.h
src/game/sim/: action.c  action.cpp  action.h  actor.c  actor.cpp  actor.h  area.c  area.cc  area.cpp  area.h  debug.c  debug.cc  debug.cpp  debug.h  direction.c  direction.cpp  direction.h  ids.h  nation.c  nation.cpp  nation.h  navigation.cc  navigation.cpp  navigation.h  physics.c  physics.cc  physics.cpp  physics.h  population.c  population.cc  population.cpp  population.h  scheduler.c  scheduler.h  sim.c  sim.cpp  sim.h  sim_data.h  work.cpp  work.h  (+4 more)
src/platform/: Input.h  Window.h  input.cc  input.cpp  platform.c  platform.cc  platform.cpp  platform.h  platform_data.h  window.cc
